--- a/tableau page/perceptive-analytics.com/tableau-consultants/css/style.css
+++ b/tableau page/perceptive-analytics.com/tableau-consultants/css/style.css
@@ -41,6 +41,7 @@
 	font-weight: normal;
 	font-style: normal;
 }
+@import url(//db.onlinewebfonts.com/c/70c38766a71f8f7f0a477605da15fcd3?family=SF+Pro+Display);
 header {
 	-webkit-box-shadow: inset -3px 0 7px rgba(0, 0, 0, .16);
 	-moz-box-shadow: inset -3px 0 7px rgba(0, 0, 0, .16);
